# tanmatsu-launcher

./: .gitignore  COMPOSITOR.md  PLUGINAPIS.md
components/badgeteam__badge-bsp/: .component_hash  CHECKSUMS.json  CMakeLists.txt  Kconfig  idf_component.yml
components/badgeteam__badge-bsp/common/: badge_bsp_device.c
components/badgeteam__badge-bsp/stub/: badge_bsp_audio.c  badge_bsp_device.c  badge_bsp_display.c  badge_bsp_i2c.c  badge_bsp_input.c  badge_bsp_led.c  badge_bsp_orientation.c  badge_bsp_power.c  badge_bsp_rtc.c
components/badgeteam__badge-bsp/targets/bornhack-2024-pov/: badge_bsp_device.c  badge_bsp_i2c.c  badge_bsp_input.c  badge_bsp_led.c
components/badgeteam__badge-bsp/targets/bornhack-2025-circle/: badge_bsp_device.c  badge_bsp_display.c  badge_bsp_input.c  badge_bsp_led.c
components/badgeteam__badge-bsp/targets/esp32-p4-function-ev-board/: badge_bsp_device.c  badge_bsp_display.c  badge_bsp_input.c
components/badgeteam__badge-bsp/targets/hackerhotel-2024/: badge_bsp_device.c  badge_bsp_display.c  badge_bsp_i2c.c  badge_bsp_input.c  badge_bsp_led.c
components/badgeteam__badge-bsp/targets/kami/: badge_bsp_device.c  badge_bsp_display.c  badge_bsp_i2c.c  badge_bsp_input.c  badge_bsp_led.c  badge_bsp_power.c
components/badgeteam__badge-bsp/targets/mch2022/: badge_bsp_device.c  badge_bsp_display.c  badge_bsp_i2c.c  badge_bsp_input.c  badge_bsp_power.c
components/badgeteam__badge-bsp/targets/tanmatsu/: badge_bsp_audio.c  badge_bsp_device.c  badge_bsp_display.c  badge_bsp_i2c.c  badge_bsp_input.c  badge_bsp_led.c  badge_bsp_orientation.c  badge_bsp_power.c  (+1 more)
components/badgeteam__badge-elf/: .component_hash  .gitmodules  CHECKSUMS.json  CMakeLists.txt  README.md  idf_component.yml  symbol_export.sh  symbol_export.txt
components/badgeteam__badge-elf/include/: badge_elf.h
components/badgeteam__badge-elf/src/: badge_elf.c  kbelf_lib_badge.c  kbelf_lib_c.c  kbelf_lib_gcc.c  kbelf_lib_m.c  kbelf_lib_pax_codecs.c  kbelf_lib_pax_gfx.c  kbelf_lib_plugin.c  kbelf_lib_pthread.c  kbelfx.c
components/badgeteam__badge-elf/symbol_export/: badge  c  gcc  m  pax-codecs  pax-gfx  pthread
components/plugin-api/include/: plugin_context.h  tanmatsu_plugin.h
main/: CMakeLists.txt  main.c  plugin_api.c  plugin_manager.c  plugin_manager.h  sdcard.c
main/menu/: about.c  app_inspect.c  apps.c  charging_mode.c  home.c  menu_brightness.c  menu_device_information.c  menu_filebrowser.c  menu_hardware_test.c  menu_plugins.c  menu_plugins.h  menu_power_information.c  menu_repository_client.c  menu_repository_client_project.c  menu_rftest.c  menu_settings.c  menu_wifi_info.c  message_dialog.c  nametag.c  settings_clock.c  settings_clock_timezone.c  settings_repository.c  textedit.c  wifi.c  wifi_edit.c  wifi_scan.c
tools/plugin-sdk/: README.md  plugin-build.cmake  plugin.ld  toolchain-plugin.cmake
tools/plugin-sdk/lib/: libplugin_stubs.c
